test/files/neg/t6375.check
t6375.scala:6: warning: no valid targets for annotation on value x1 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @getter)
  @Bippy           val x1: Int    // warn
   ^
t6375.scala:7: warning: no valid targets for annotation on value x2 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.field @getter)
  @(Bippy @field)  val x2: Int    // warn
   ^
t6375.scala:9: warning: no valid targets for annotation on value x4 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.setter @getter)
  @(Bippy @setter) val x4: Int    // warn
   ^
t6375.scala:10: warning: no valid targets for annotation on value x5 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.param @getter)
  @(Bippy @param)  val x5: Int    // warn
   ^
t6375.scala:20: warning: no valid targets for annotation on value q1 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.getter @field)
  @(Bippy @getter) private[this] val q1: Int = 1 // warn
   ^
t6375.scala:40: warning: no valid targets for annotation on value p2 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.getter @param)
  @(Bippy @getter) p2: Int,   // warn
   ^
t6375.scala:41: warning: no valid targets for annotation on value p3 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.setter @param)
  @(Bippy @setter) p3: Int,   // warn
   ^
t6375.scala:42: warning: no valid targets for annotation on value p4 - it is discarded unused. You may specify targets with meta-annotations, e.g. @(Bippy @scala.annotation.meta.field @param)
  @(Bippy @field) p4: Int     // warn
   ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
